# bmstu-programming

./: .clang-format  .gitignore
algorithms and data structures/: binsearch.c  bmall.c  bmall2.c  bmall3.c  bubblesort.c  circbuf.c  circbuf2.c  circbuf3.c  cluster.c  cluster2.c  cluster3.c  cluster4.c  concat.c  csort.c  csort2.c  datesort.c  datesort2.c  datesort3.c  disparray.c  disparray2.c  disparray3.c  disparray4.c  dsort.c  dsort2.c  elem.h  extstop.c  fibstr.c  fibsys.c  frame.c  heapsort.c  intersect-jk.c  intersect.c  kmpall.c  kmpall2.c  kmpall3.c  lexavl.c  lexavl2.c  lexavl3.c  listbsort.c  listbsort2.c  (+67 more)
computer graphics algorithms/: shell.nix
computer graphics algorithms/lab1/: build.zig  build.zig.zon
computer graphics algorithms/lab2/: build.zig  build.zig.zon
computer graphics algorithms/lab3/: build.zig  build.zig.zon
computer graphics algorithms/lab5/: CMakeLists.txt  build.zig  build.zig.zon  main.cc
computer graphics algorithms/lab5/src/: main.cc
discrete mathematics/: BridgeNum.cc  Canonic.cc  Cpm.cc  DetRec.cc  Dividers.go  EqDist.cc  EqMealy.cc  FormulaOrder.cc  GraphBase.cc  Ideal.cc  Kruskal.cc  LangMealy.cc  Loops.cc  MapRoute.cc  Mars.cc  MaxComponent.cc  Mealy2Moore.cc  MinMealy.cc  Modules.cc  Modules.java  Prim.cc  VisMealy.cc
informatics basics/: .gitignore  README.md
low level programming/: utils.asm  utils.inc
parallel-programming/lab1/: Cargo.toml  shell.nix
parallel-programming/lab1/benches/: product.rs
parallel-programming/lab1/src/: lib.rs  main.rs
programming languages/: iu9lab.cls
(+186 files in other folders)
