[package]
name = "lab1"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.2"

[dev-dependencies]
divan = "0.1.21"
proptest = "1.7.0"
rand = "0.9.2"

[[bench]]
name = "product"
harness = false

[profile.bench]
debug = true

[profile.junk]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
overflow-checks = false
debug-assertions = false
